--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aframe": "^1.5.0",
     "aframe-ar": "^0.2.1-a",
     "aframe-react": "^4.4.0",
+    "dotenv": "^16.4.4",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
