--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-webcam": "^7.2.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
