--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.4",
     "openapi": "^1.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
@@ -51,5 +52,5 @@
   },
   "browser": {
     "crypto": false
-}
+  }
 }
